<resources>
    <string name="app_name">Venus Help</string>
    <string name="lblRestriccion">Esta aplicación esta diseñada para ser manipulada para usuarios mayores a 14 años</string>
    <string name="lblContinuar">Continuar</string>
    <string name="lblSalir">Salir</string>
    <string name="lblAnonimo">No Anonimo</string>
    <string name="lblInvitado">Invitado</string>
    <string name="title_activity_login">Registrar nuevo usuario</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (optional)</string>
    <string name="action_sign_in">Registrar</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ventana_fb">VentanaFbActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lblNoAnonimo">Anonimo</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="title_activity_receiver_sms">ReceiverSMSActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_mouse">Menu</string>
    <string name="title_home">Retos</string>
    <string name="title_dashboard">Escribe...</string>
    <string name="title_notifications">Instituciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuCompartir">Compartir</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="lblTitulo2">Mapa</string>
    <string name="lblLatitud">Latitud</string>
    <string name="lblLongitud">Longitud</string>
    <string name="lblActivar">Activar</string>
    <string name="lblEnvia">Envía</string>

</resources>
