<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapaBotActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="41dp"
        android:text="@string/lblTitulo2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="97dp"
        android:text="@string/lblLatitud"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="156dp"
        android:text="@string/lblLongitud"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-67dp"
        android:layout_marginEnd="65dp"
        android:onClick="visualizaPosicion"
        android:text="@string/lblActivar" />

    <EditText
        android:id="@+id/txtLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-128dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/txtLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtLatitud"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <WebView
        android:id="@+id/visorweb"
        android:layout_width="298dp"
        android:layout_height="250sp"
        android:layout_above="@+id/button10"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="135dp"
        android:onClick="Envia"
        android:text="@string/lblEnvia" />
</RelativeLayout>